8176717: GC log file handle leaked to child processes

Reviewed-by: stuefe, rehn